force-app/main/default/objects/Labor_Exchange_Community_Setup__c/Labor_Exchange_Community_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Labor Exchange Community Setup</label>
</CustomObject>