force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/Applications_Tile_2_Stages__c.field-meta.xml
<CustomField>
    <fullName>Applications_Tile_2_Stages__c</fullName>
    <description>A comma-separated list which determines which Job Application stages are included in the second (middle) Job Applications tile within the lexCandidateApplication Aura component (most commonly used within the Labor Exchange Community on the Candidate Applications page).</description>
    <inlineHelpText>Please enter a comma-separated list of stages (from the Launchpad__Stages__c picklist on the Launchpad__Applicant_Tracking__c object) that you would like to include in the second (middle) tile within the lexCandidateApplication Aura component. The lexCandidateApplication component is most commonly used within the Labor Exchange Community on the Candidate Applications page.</inlineHelpText>
    <label>Applications Tile 2 Stages</label>
    <type>TextArea</type>
</CustomField>