force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/ContactRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordTypes__c</fullName>
    <description>Determines which Contacts to include in Candidate Search</description>
    <inlineHelpText>Please provide a comma-separated list. Record Types listed are queried in the Candidate Search for the LEX Community. They must also be have a Launchpad__Stage__c picklist value that meets one listed in the Searchable Contact Stages custom setting field.</inlineHelpText>
    <label>Contact Record Type Dev Names</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>