force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/Eligible_Open_Job_Stages__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Open_Job_Stages__c</fullName>
    <description>Determines which Job Stages qualify as &quot;Open Jobs&quot;.</description>
    <inlineHelpText>Please provide a comma-separated list. Job stages listed here will be used when &quot;Open Jobs&quot; are displayed within the Labor Exchange community.</inlineHelpText>
    <label>Eligible Open Job Stages</label>
    <type>TextArea</type>
</CustomField>