force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/Events_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Events_Page_URL__c</fullName>
    <inlineHelpText>Enables events page to be accessed from outside the community.</inlineHelpText>
    <label>Events Page URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>