force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/Jobs_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Page_URL__c</fullName>
    <inlineHelpText>Enables jobs page to be accessed from outside the community.</inlineHelpText>
    <label>Jobs Page URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>