force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/LEX_Community_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>LEX_Community_Profile_Id__c</fullName>
    <label>LEX Community Profile Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>