force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/of_Tiles_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>of_Tiles_Per_Page__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>Controls how many Tiles will display on a Page before Pagination.  This applies to Home Page Tiles, Event Tiles and Job Tiles.</inlineHelpText>
    <label># of Tiles Per Page</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>