force-app/main/default/objects/Labor_Exchange_Community_Setup__c/fields/Searchable_Contact_Stages__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Contact_Stages__c</fullName>
    <defaultValue>&quot;Assessment, Enrollment, Services, Exit, Followup, Closed&quot;</defaultValue>
    <description>Determines, in part, which Contacts to include in Candidate Search. Stages included here from the Launchpad__Stage__c field on the Contact will be available to search in the Labor Exchange Community.</description>
    <inlineHelpText>Please provide a comma-separated list. Contacts with a stage picklist value listed here are queried in the Candidate Search for the LEX Community. They must also be of the correct record type (see the Contact Record Type Dev Names custom setting field).</inlineHelpText>
    <label>Searchable Contact Stages</label>
    <type>TextArea</type>
</CustomField>